--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
           <img src="bmw.png" alt="range" />
           <div class="range__details">
             <h4>CARS</h4>
-            <a href="#"><i class="ri-arrow-right-line"></i></a>
+            <a href="book.html"><i class="ri-arrow-right-line"></i></a>
           </div>
         </div>
         <div class="range__card">
           <img src="g63_resized_1431x1080.png" alt="range" />
           <div class="range__details">
             <h4>SUVS</h4>
-            <a href="#"><i class="ri-arrow-right-line"></i></a>
+            <a href="book.html"><i class="ri-arrow-right-line"></i></a>
           </div>
         </div>
         <div class="range__card">
