--- a/book.html
+++ b/book.html
@@ -4,32 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Now</title>
-    <link rel="stylesheet" href="book.css">
+    <link rel="stylesheet" href="booking.css">
 </head>
 <body>
-    <div class="head">
-        <h2>LUXIDRIVE</h2>
-    </div>
-    <div class="wrapper">
-        <form action="">
-          <h1>Make It Official-Book Now!</h1>
-          <div class="input-box">
-            <input type="text" placeholder="Username" required>
+    
+    <div class="container">
+      <h1>LUXIDRIVE</h1>
+      <form id="bookingForm">
+          <div class="form-group">
+              <label for="name">Full Name:</label>
+              <input type="text" id="name" name="name" required>
           </div>
-          <div class="input-box">
-            <input type="text" placeholder="Email" required>
+          <div class="form-group">
+              <label for="phone">Phone Number:</label>
+              <input type="tel" id="phone" name="phone" required>
           </div>
-          <div class="input-box">
-            <input type="text" placeholder="Contact Number" required>
+          <div class="form-group">
+              <label for="pickup">Pickup Location:</label>
+              <input type="text" id="pickup" name="pickup" required>
           </div>
-          <div class="input-box">
-            <input type="text" placeholder="Address" required>
+          <div class="form-group">
+              <label for="destination">Destination:</label>
+              <input type="text" id="destination" name="destination" required>
           </div>
-          <button type="submit" class="btn">Book</button>
+          <div class="form-group">
+              <label for="cabType">Cab Type:</label>
+              <select id="cabType" name="cabType" required>
+                  <option value="economy">Economy</option>
+                  <option value="comfort">Comfort</option>
+                  <option value="luxury">Luxury</option>
+              </select>
+          </div>
+          <div class="form-group">
+              <label for="date">Booking Date:</label>
+              <input type="date" id="date" name="date" required>
+          </div>
+          <div class="form-group">
+              <label for="time">Booking Time:</label>
+              <input type="time" id="time" name="time" required>
+          </div>
+          <button type="submit">Book Now</button>
+      </form>
+  </div>
+  <script src="cab.js"></script>
+          <!-- <button type="submit" class="btn">Book</button>
           <div class="homepage">
             <p>Back to Homepage | <a href="index.html">Click Me</a></p>
           </div>
         </form>
-      </div>
+      </div> -->
 </body>
 </html>
