--- a/index.html
+++ b/index.html
@@ -78,24 +78,24 @@
           </div>
         </div>
         <div class="range__card">
-          <img src="g63_resized_1431x1080.png" alt="range" />
+          <img src="taxi-1.png" alt="range" />
           <div class="range__details">
-            <h4>SUVS</h4>
-            <a href="#"><i class="ri-arrow-right-line"></i></a>
+            <h4>CAB-1</h4>
+            <a href="book.html"><i class="ri-arrow-right-line"></i></a>
           </div>
         </div>
         <div class="range__card">
           <img src="g63_resized_1431x1080.png" alt="range" />
           <div class="range__details">
             <h4>SUVS</h4>
-            <a href="#"><i class="ri-arrow-right-line"></i></a>
+            <a href="book.html"><i class="ri-arrow-right-line"></i></a>
           </div>
         </div>
         <div class="range__card">
           <img src="g63_resized_1431x1080.png" alt="range" />
           <div class="range__details">
             <h4>SUVS</h4>
-            <a href="#"><i class="ri-arrow-right-line"></i></a>
+            <a href="book.html"><i class="ri-arrow-right-line"></i></a>
           </div>
         </div>
         <div class="range__card">
