--- a/book.html
+++ b/book.html
@@ -27,14 +27,14 @@
               <label for="destination">Destination:</label>
               <input type="text" id="destination" name="destination" required>
           </div>
-          <div class="form-group">
+          <!-- <div class="form-group">
               <label for="cabType">Cab Type:</label>
               <select id="cabType" name="cabType" required>
                   <option value="economy">Economy</option>
                   <option value="comfort">Comfort</option>
                   <option value="luxury">Luxury</option>
               </select>
-          </div>
+          </div> -->
           <div class="form-group">
               <label for="date">Booking Date:</label>
               <input type="date" id="date" name="date" required>
